# mcp-authflow-resource

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  README.md  RELEASING.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  friction.md  index.md  quickstart.md
docs/api/: auth.md  friction.md  index.md  middleware.md  oauth-discovery.md  validation.md
mcp_authflow_resource/: __init__.py  middleware.py  oauth_discovery.py  validation.py
mcp_authflow_resource/auth/: __init__.py  ssrf_protection.py  token_verifier.py
mcp_authflow_resource/friction/: controller.py  decorator.py  logging.py  registry.py  window.py
mcp_resource_framework/: __init__.py  middleware.py  oauth_discovery.py  validation.py
mcp_resource_framework/auth/: token_verifier.py
mcp_resource_framework/friction/: __init__.py  controller.py  decorator.py  logging.py  models.py
tests/: conftest.py  test_middleware.py  test_oauth_discovery.py  test_ssrf_protection.py  test_token_verifier.py  test_validation.py
tests/friction/: test_controller.py  test_decorator.py  test_load.py  test_registry.py  test_window.py
