[project]
name = "mcp-authflow-resource"
version = "0.5.2"
description = "OAuth 2.0 Resource Server framework for MCP (Model Context Protocol) servers"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Brooks McMillin" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.24.0",
    "starlette>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/brooksmcmillin/mcp-authflow-resource"
Documentation = "https://github.com/brooksmcmillin/mcp-authflow-resource#readme"
Repository = "https://github.com/brooksmcmillin/mcp-authflow-resource"
Issues = "https://github.com/brooksmcmillin/mcp-authflow-resource/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "pyright>=1.1.400",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_authflow_resource"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "DTZ"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.bandit]
exclude_dirs = ["tests", "site", ".venv"]
skips = ["B101"]  # assert_used — fine in tests/dev

[tool.deptry]
extend_exclude = ["site", "docs"]
